# OpenweathermapViewer

./: .gitignore  CMakeLists.txt  OpenweathermapViewer_ru_RU.ts  appsettings.ini.in  deploy_and_test.sh  qml.qrc  readme.md
debian/: OpenweathermapViewer.desktop  OpenweathermapViewer.sh  README.Debian  changelog  control  copyright  qt_deps_copy.sh
deploy/: deploy.dockerfile  deploy.sh  deploytest.dockerfile  reinstall-package.sh  update-package.sh
inst/: OpenweathermapViewer.desktop
scripts/: deploy.dockerfile  deploy.sh  deploytest.dockerfile  reinstall-package.sh  update-package.sh
src/: MainWindow.qml  OpenweathermapViewer_ru_RU.ts  main.cpp  qml.qrc
src/components/currentweather/: CurrentWeatherItem.qml  CurrentWeatherItem.ui.qml  currentweathermodel.cpp  currentweathermodel.h
src/components/dailyforecast/: DailyForecastDelegate.ui.qml  DailyForecastItem.qml  DailyForecastItem.ui.qml  dailyforecastmodel.cpp  dailyforecastmodel.h
src/components/hourlyforecast/: HourlyForecastDelegate.ui.qml  HourlyForecastItem.qml  HourlyForecastItem.ui.qml  hourlyforecastmodel.cpp  hourlyforecastmodel.h
src/components/openweathermapapiclient/: abstractopenweathermapapiclient.cpp  abstractopenweathermapapiclient.h  openweathermapapiclient.cpp  openweathermapapiclient.h
src/modules/appsettings/: abstractappsettings.cpp  abstractappsettings.h  appsettings.cpp  appsettings.h
src/modules/openweathermapapiclient/: abstractopenweathermapapiclient.cpp  abstractopenweathermapapiclient.h  openweathermapapiclient.cpp  openweathermapapiclient.h
src/pages/cities/: CitiesPage.qml  CitiesPage.ui.qml  citieslistmodel.cpp  citieslistmodel.h
src/pages/error/: ErrorPage.qml
src/pages/home/: HomePage.qml  HomePage.ui.qml
test/: CMakeLists.txt
test/currentweathermodeltest/: CMakeLists.txt  api_response.json  main.cpp
